--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@prisma/client": "^5.0.0",
     "@reduxjs/toolkit": "^2.0.0",
     "axios": "^1.6.0",
+    "docxtemplater": "^3.59.0",
     "framer-motion": "^10.16.0",
     "next": "^14.0.0",
     "nodemailer": "^6.10.0",
+    "pdfkit": "^0.16.0",
+    "pizzip": "^3.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
@@ -28,13 +31,17 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.0.0",
+    "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.13.9",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
     "jest": "^29.0.0",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.5.1",
     "prisma": "^5.0.0",
     "tailwindcss": "^3.4.17",
