--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
     "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
@@ -37,10 +38,11 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.20",
+    "docx": "^9.1.1",
     "dotenv": "^16.4.7",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
     "node-fetch": "^2.7.0",
     "postcss": "^8.5.1",
     "prisma": "^5.0.0",
