--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
     "@prisma/client": "^5.0.0",
     "@reduxjs/toolkit": "^2.0.0",
     "axios": "^1.6.0",
